<resources>
    <string name="app_name">My Ticket</string>
    <string name="hoten">Họ và tên</string>
    <string name="sdt">Số điện thoại</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="khac">Khác</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="cmt">Chứng minh thư nhân dân </string>
    <string name="dangky">Đăng ký </string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="timkiem">Tìm Kiếm</string>
    <string name="diemdon">Điểm đón</string>
    <string name="chieudi">Nam Định - Hà Nội</string>
    <string name="chieuve">Hà Nội -  Nam Định</string>
    <string name="diemdung"> Điểm dừng</string>
    <string name="chonngay">Chọn ngày đi DD/MM/YYYY</string>
    <string name="ok">OK</string>
    <string name="thoat">Thoát</string>
    <string name="chonghe">Chọn Ghế Ngối</string>
    <string name="trangchu">Trang chủ</string>
    <string name="taikhoan">Tài khoản của tôi</string>
    <string name="ve">Vé của tôi</string>
    <string name="thaydoi">Thay đổi thông tin</string>
    <string name="thongtinve">Thông tin vé của bạn</string>
    <string name="quanlyxe">Quản lý xe</string>
    <string name="chuyendi">Chi tiết chuyến đi</string>
    <string name="thaydoithongtin">Thay đổi thông tin</string>
    <string name="capnhat">Cập nhật</string>
    <string name="datvexe">ĐẶT VÉ XE</string>
    <string name="chongio">Chọn giờ đi</string>


</resources>
