<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/txtTimKiem"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_above="@+id/KhungTimKiem"
            android:layout_marginTop="15dp"
            android:text="@string/timkiem"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="180dp" />

        <LinearLayout
            android:id="@+id/KhungTimKiem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size20dp"
            android:layout_marginTop="@dimen/size30dp"
            android:layout_marginEnd="@dimen/size15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTimKiem"
            tools:ignore="ExtraText">

            <RadioGroup
                android:id="@+id/rgChieuDi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbdi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:padding="@dimen/size15dp"
                    android:text="@string/chieudi" />

                <RadioButton
                    android:id="@+id/rbve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/size15dp"
                    android:text="@string/chieuve" />
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size20dp"
               >

                <Spinner

                    android:id="@+id/spnCategory"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner

                    android:id="@+id/spnCategory2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtGio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_date"
                    android:drawablePadding="15dp"
                    android:hint="@string/chonngay"
                    android:padding="@dimen/size15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtNgay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_time"
                    android:drawablePadding="15dp"
                    android:hint="@string/chongio"
                    android:padding="@dimen/size15dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size15dp"
            app:layout_constraintTop_toBottomOf="@+id/KhungTimKiem"
            tools:layout_editor_absoluteX="69dp">

            <Button
                android:id="@+id/btnok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorbtn"
                android:text="@string/ok" />

            <Button
                android:id="@+id/btnThoat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorbtn"
                android:text="@string/thoat" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
