<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/txtTaiKhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/KhungTaiKhoan"
        android:layout_marginTop="50dp"
        android:text="@string/taikhoan"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="180dp" />

    <LinearLayout
        android:id="@+id/KhungTaiKhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaiKhoan"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/txtTenND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_user"
            android:drawablePadding="20dp"
            android:padding="15dp"


            />


        <TextView
            android:id="@+id/txtNgaySinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_birth"
            android:drawablePadding="20dp"
            android:padding="15dp" />
        <TextView
            android:id="@+id/txtGioiTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_gender"
            android:drawablePadding="20dp"
            android:padding="15dp" />

        <TextView
            android:id="@+id/txtCMT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_userid"
            android:drawablePadding="20dp"
            android:padding="15dp"
            android:maxLength="9"

            />


        <TextView
            android:id="@+id/txtSDT"
            android:layout_width="370dp"
            android:layout_height="47dp"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="20dp"
            android:padding="15dp" />
        <TextView
            android:id="@+id/txtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="20dp"

            android:padding="15dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTrangChu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorbtn"
            android:text="@string/trangchu"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btnThayDoiTT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorbtn"
            android:text="@string/thaydoi"
            android:layout_gravity="center"/>
    </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>